# captcha_solver

./: .gitignore  GEMINI.md  README.md  ascii_art.py  config.example.toml  debug_templates.py  debug_values.py  evaluate_legacy.py  evaluate_model.py  export_onnx.py  generate_synthetic.py  inspect_matches.py  labeling_tool.py  main.py  pyproject.toml  run_labeling_tool.py  run_ml_solver.py  solve_with_ssim.py  test_font_match.py  test_padding_change.py  train.sh  train_model.py  ty.toml
labeling_tool/: __main__.py  gui.py  main.py  session_manager.py
release/: build.py
solver/: light_solver.py  main.py  ml_solver.py  onnx_solver.py  solve.py  standalone.py  utils.py
trainer/: __main__.py  check_distribution.py  evaluate_math.py  export.py  export_math.py  gui.py  merge_data.py  train.py  train_math.py
