[project]
name = "captcha-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy<2",
    "onnxruntime==1.19.2",
    "pillow>=10.4.0",
    "pyside2>=5.15.2.1",
    "requests>=2.32.4",
    "tomli>=2.4.0",
    "tomli-w>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["solver"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[dependency-groups]
dev = [
    "onnx>=1.17.0",
    "scikit-image>=0.21.0",
    "torch<2.3",
    "torchvision<0.18",
]
